modify: set to use proxy