@@ -1,6 +1,7 @@
 package com.shoalter.pure;
 
 import com.shoalter.SslUtil;
+import org.springframework.boot.web.server.Ssl;
 
 import java.io.*;
 import java.net.*;
@@ -13,25 +14,26 @@ public class ProxyExample {
     private static final String REQUEST_BODY = "variables={\"cursor\": \"\", \"id\": \"100044641110094\", \"count\": 3}&doc_id=8973253692695896";
 
     public static void main(String[] args) {
+
         SslUtil.trustAll();
 
-        String apiUrl = "http://www.example.com/api";
+        String apiUrl = "http://www.example.com/api/";
         apiUrl = "https://www.google.com/search?q=apple&sca_esv=664a1b17173617b9&sxsrf=ADLYWIKj73u1_p1zrgZtmhECK5IUmA2ljA%3A1734503660492&ei=7GxiZ7HTHeyZvr0PmoCqqAE&ved=0ahUKEwix-a3U2bCKAxXsjK8BHRqAChUQ4dUDCBA&uact=5&oq=apple&gs_lp=Egxnd3Mtd2l6LXNlcnAiBWFwcGxlMgoQIxiABBgnGIoFMgoQIxiABBgnGIoFMgQQIxgnMhYQLhiABBixAxjRAxhDGMcBGMkDGIoFMg0QABiABBixAxhDGIoFMhMQLhiABBixAxjRAxhDGMcBGIoFMgoQABiABBhDGIoFMg0QABiABBixAxhDGIoFMhAQLhiABBjRAxhDGMcBGIoFMgsQABiABBiSAxiKBTIlEC4YgAQYsQMY0QMYQxjHARjJAxiKBRiXBRjcBBjeBBjgBNgBAUj_B1DqA1jvB3ABeACQAQCYAXCgAbYCqgEDNC4xuAEDyAEA-AEBmAIFoALeAcICBxAjGLADGCfCAgoQABiwAxjWBBhHwgIOEC4YgAQYsQMY0QMYxwHCAggQABiABBixA8ICERAuGIAEGLEDGNEDGIMBGMcBwgIFEAAYgATCAh0QLhiABBixAxjRAxjHARiXBRjcBBjeBBjgBNgBAcICIhAuGIAEGLEDGNEDGEMYxwEYigUYlwUY3AQY3gQY4ATYAQGYAwCIBgGQBgq6BgYIARABGBSSBwE1oAfXOA&sclient=gws-wiz-serp";
 //        apiUrl = "https://www.facebook.com/api/graphql/";
 
         try {
-            java.net.Proxy proxy = getProxy();
+            Proxy proxy = getProxy();
 
             // Step 2: Open a connection to the target URL through the proxy
-            URL url = new URL(apiUrl);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection(proxy);
+            URL url = new URL(new URI(apiUrl).toASCIIString());
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection(proxy); //proxy
 
             // Step 3: Configure the connection
             setConnection(connection);
 
             // Step 4: Write request body
-            try (OutputStream os = connection.getOutputStream()) {
-                os.write(REQUEST_BODY.getBytes());
+            try (DataOutputStream os = new DataOutputStream(connection.getOutputStream())) {
+                os.writeBytes(REQUEST_BODY);
                 os.flush();
             }
 
@@ -52,12 +54,14 @@ public class ProxyExample {
         } catch (IOException e) {
             System.err.println("Error occurred while making the request: " + e.getMessage());
             e.printStackTrace();
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
         }
     }
 
     private static void setConnection(HttpURLConnection connection) throws ProtocolException {
         connection.setRequestMethod("POST");
-        connection.setDoOutput(true);
+        connection.setDoOutput(true); // set true if you want to send request body
         connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
         connection.setRequestProperty("Content-Length", String.valueOf(REQUEST_BODY.length()));
         connection.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36");
@@ -66,7 +70,7 @@ public class ProxyExample {
     }
 
     private static Proxy getProxy() {
-        Proxy proxy = new java.net.Proxy(Proxy.Type.HTTP, new InetSocketAddress(PROXY_HOST, PROXY_PORT));
+        Proxy proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(PROXY_HOST, PROXY_PORT));
         return proxy;
     }
 }
